[package]
name = "rseq"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# The model traffics in u64 machine words used as indices on a 64-bit target,
# and the kernel ABI reports sentinels in unsigned fields; try_from at every
# index would obscure rather than protect.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
