[package]
name = "rseq"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# The model traffics in u64 machine words used as indices on a 64-bit target,
# the kernel ABI reports sentinels in unsigned fields, and raw syscalls take
# pids/signals as untyped words; try_from at every cast would obscure rather
# than protect.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# Benchmark statistics: counts and nanosecond totals sit far below 2^52.
cast_precision_loss = "allow"
